# CMake_training

./: LICENSE  README.md
train1/: CMakeLists.txt
train3/: CMakeLists.txt
train4/: CMakeLists.txt
train4/include/: CMakeLists.txt
train4/src/: CMakeLists.txt
train5/: CMakeLists.txt
train5/hellolib/: CMakeLists.txt
